<resources>
    <string name="app_name">Driveroo</string>
    <string name="firstName">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="save">Zapisz</string>
    <string name="further">Dalej</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changeDate">Zmień datę</string>
    <string name="changeTime">Zmień godzinę</string>
    <string name="saveEntry">Zapisz wpis</string>
    <string name="summary">Podsumowanie:</string>
    <string name="typeOfEntry">Typ przejazdu:</string>
    <string name="dateOfEntry">Data:</string>
    <string name="timeOfEntry">Godzina:</string>
    <string name="country">Kraj:</string>
    <string name="editEntry">Edytuj wpis</string>
    <string name="sendMail">Wyślij dane</string>
    <string name="whichDataToSend">Które dane chcesz wysłać?</string>
    <string name="send">Wyślij</string>
    <string name="delete_entry">Usuń wpis</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="company_name">Nazwa firmy</string>
    <string name="bilateral">Bilateralny</string>
    <string name="cross_trade">Cross-trade</string>
    <string name="transit">Tranzyt</string>
    <string name="cabotage">Kabotaż</string>
    <string name="type">Typ:</string>
</resources>