<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.DriverTimeBooking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp"
    tools:context=".ui.chooseDelegationType.view.ChooseDelegationTypeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="Wybierz typ przejazdu (opcjonalnie)"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:paddingVertical="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/bilateral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bilateral" />

            <RadioButton
                android:id="@+id/cross_trade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cross_trade" />

            <RadioButton
                android:id="@+id/transit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transit" />

            <RadioButton
                android:id="@+id/cabotage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cabotage" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/further"
        android:onClick="goFurther"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>